--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
 					</hr>
 				</div>
                 <div class="contact-us small-12 small-centered medium-10 columns footer-section">
-					<a href="mailto:sakidev59@gmail.com" target="_blank" class="social social-hover">
+					<a href="mailto:pixidevsaki@gmail.com" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/email.svg" alt="email-icon">
 					</a>
-					<a href="http://www.facebook.com" target="_blank" class="social social-hover">
+					<a href="https://www.facebook.com/profile.php?id=100084099870816" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/facebook.svg" alt="facebook-icon">
 					</a>
 					<a href="https://github.com/Sakisaksak" target="_blank" class="social social-hover">
