--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 					<a href="https://github.com/Sakisaksak" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/github.svg" alt="github-icon">
 					</a>
-					<a href="https://www.linkedin.com/" target="_blank" class="social social-hover">
+					<a href="https://www.linkedin.com/in/saki-pixidev-862bb4246/" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/linkedin.svg" alt="linkedin-icon">
 					</a>
 					<hr>
