--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sakisaks</title>
+		<title>PixiDev Saki</title>
 		<link rel="shortcut icon" type="image/png" href="img/fav_mini.png"/>
 		<link rel="stylesheet" href="css/foundation.css" />
 		<link rel="stylesheet" href="css/style.css" />
@@ -22,7 +22,7 @@
 											&nbsp;
 										</span>
 										<text class="saki sakihov">
-											Sakisaks
+											PixiDev Saki
 										</text>
 									</h1>
 								</div>
