--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>PixiDev Saki</title>
+		<title>Saki</title>
 		<link rel="shortcut icon" type="image/png" href="img/fav_mini.png"/>
 		<link rel="stylesheet" href="css/foundation.css" />
 		<link rel="stylesheet" href="css/style.css" />
@@ -22,7 +22,7 @@
 											&nbsp;
 										</span>
 										<text class="saki sakihov">
-											PixiDev Saki
+											Saki
 										</text>
 									</h1>
 								</div>
@@ -257,7 +257,7 @@
 					</hr>
 				</div>
                 <div class="contact-us small-12 small-centered medium-10 columns footer-section">
-					<a href="mailto:pixidevsaki@gmail.com" target="_blank" class="social social-hover">
+					<a href="mailto:gsdgnavarro@gmail" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/email.svg" alt="email-icon">
 					</a>
 					<a href="https://www.facebook.com/profile.php?id=100084099870816" target="_blank" class="social social-hover">
