--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 					</hr>
 				</div>
                 <div class="contact-us small-12 small-centered medium-10 columns footer-section">
-					<a href="mailto:gsdgnavarro@gmail" target="_blank" class="social social-hover">
+					<a href="mailto:gsdgnavarro@gmail.com" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/email.svg" alt="email-icon">
 					</a>
 					<a href="https://www.facebook.com/profile.php?id=100086463362213" target="_blank" class="social social-hover">
