--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 						<img class="icons" src="img/social-icons/email.svg" alt="email-icon">
 					</a>
 					<a href="https://www.facebook.com/profile.php?id=100086463362213" target="_blank" class="social social-hover">
-						<img class="icons" src="img/social-icons/facebook.svg" alt="facebook-icon">
+						<img class="icons" src="img/social-icons/upwork.png" alt="facebook-icon">
 					</a>
 					<a href="https://github.com/Sakisaksak" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/github.svg" alt="github-icon">
