--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 						<img class="icons" src="img/social-icons/email.svg" alt="email-icon">
 					</a>
 					<a href="https://www.upwork.com/freelancers/~01a6af74cf4d44d969" target="_blank" class="social social-hover">
-						<img class="upwork" src="img/social-icons/upwork.svg" alt="upwork-icon">
+						<img class="icons" src="img/social-icons/upwork.svg" alt="upwork-icon">
 					</a>
 					<a href="https://github.com/Sakisaksak" target="_blank" class="social social-hover">
 						<img class="icons" src="img/social-icons/github.svg" alt="github-icon">
