--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                 <img class="homepage-main-photo" src="img/banner2.jpg" alt="banner">
             </div>
 			<div class="main-section-title small-10 columns">
-                <div class="table">
-					<div class="table-cell">
+                <div class="bannerhero">
+					<div class="bannerhero-inner">
 						<img class="avatar" src="img/white-full.jpg" alt="avatar"/>
 					</div>
-                    <div class="table-cell">
+                    <div class="bannerhero-inner">
 						<h2>
 							Hello there,
 						</h2>
